# stockflow-sistema-gestion-de-inventario

./: README.md
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 99e4905159ed_init_nueva_db_con_rol_user.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/dependencies/: auth.py  db.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: alerts.py  auth.py  categories.py  dashboard.py  movements.py  products.py  users.py
backend/app/core/: config.py  database.py  rate_limit.py  scheduler.py  security.py
backend/app/models/: __init__.py  base.py  category.py  product.py  stock_movement.py  user.py
backend/app/repositories/: category.py  product.py  stock_movement.py  user.py
backend/app/schemas/: __init__.py  auth.py  category.py  dashboard.py  product.py  stock_movement.py  user.py
backend/app/services/: category.py  dashboard.py  notification.py  product.py  stock_movement.py  user.py
backend/tests/: conftest.py  test_categories.py
frontend/: .gitignore  angular.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/guards/: admin.guard.ts  auth.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/services/: auth.service.ts  category.service.ts  dashboard.service.ts  (+5 more)
frontend/src/environments/: enviroment.ts  environment.development.ts  environment.ts
(+22 files in other folders)
